# ESL_PRO

./: .env  Cargo.toml  Dockerfile  README.md  cleanup.sh  docker-compose.yml
src/: auth.rs  database.rs  handlers.rs  main.rs  models.rs  websocket.rs
static/: app.js  classroom.html  dashboard.css  dashboard.js  index.html  student-dashboard.html  style.css  teacher-dashboard.html
