[package]
name = "esl-learning-platform"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4", features = ["ws"] }
tokio = { version = "1.36", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.5.2", features = ["fs", "cors"] }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
sqlx = { version = "0.7.4", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
bcrypt = "0.15.1"
jsonwebtoken = "9.3.0"
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.34", features = ["serde"] }
anyhow = "1.0.79"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
dotenv = "0.15.0"
axum-extra = { version = "0.9.2", features = ["cookie"] }
futures-util = "0.3.30"
base64ct = "=1.7.3"
once_cell = "1.19.0"
reqwest = { version = "0.11", features = ["json", "blocking", "rustls-tls"] }
